--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline{
     agent any
     parameters {
         choice(name: 'action', choices: 'create\ndelete', description: 'Select create or destroy.')
-        string(name: 'DOCKER_HUB_USERNAME', defaultValue: 'sevenajay', description: 'Docker Hub Username')
+        string(name: 'DOCKER_HUB_USERNAME', defaultValue: 'Danielswaray', description: 'Docker Hub Username')
         string(name: 'IMAGE_NAME', defaultValue: 'youtube', description: 'Docker Image Name')
     }
     tools{
@@ -38,7 +38,7 @@ pipeline{
         when { expression { params.action == 'create'}}
             steps{
                 script{
-                    def credentialsId = 'Sonar_token'
+                    def credentialsId = 'Token'
                     qualityGate(credentialsId)
                 }
             }
