--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -1,15 +1,9 @@
-@Library('Jenkins-shared-library') _
 def COLOR_MAP = [
     'FAILURE' : 'danger',
     'SUCCESS' : 'good'
 ]
 pipeline{
     agent any
-    parameters {
-        choice(name: 'action', choices: 'create\ndelete', description: 'Select create or destroy.')
-        string(name: 'DOCKER_HUB_USERNAME', defaultValue: 'Danielswaray', description: 'Docker Hub Username')
-        string(name: 'IMAGE_NAME', defaultValue: 'youtube', description: 'Docker Image Name')
-    }
     tools{
         jdk 'jdk17'
         nodejs 'node16'
@@ -31,22 +25,14 @@ pipeline{
         stage('sonarqube Analysis'){
         when { expression { params.action == 'create'}}
             steps{
-                sonarqubeAnalysis()
-            }
-        }
-        stage('sonarqube QualitGate'){
-        when { expression { params.action == 'create'}}
-            steps{
-                script{
-                    def credentialsId = 'Token'
-                    qualityGate(credentialsId)
+                withSonarQubeEnv('sonar_server') {
+                    sh ''' $SCANNER_HOME/bin/sonar_scanner -Dsonar.projectName=youtube \
+                    -Dsonar.projectKey=youtube '''
                 }
             }
         }
-        stage('Npm'){
-        when { expression { params.action == 'create'}}
-            steps{
-                npmInstall()
+            }
+        }
             }
         }
         stage('Trivy file scan'){
@@ -75,12 +61,13 @@ pipeline{
         when { expression { params.action == 'create'}}
             steps{
                 trivyImage()
+                   withDockerRegistry(credentialsId: 'docker', toolName: 'docker'){
+                       sh "docker build --build-arg REACT_APP_RAPID_API_KEY=f0ead79813ms -t youtube ."
+                       sh "docker tag youtube Danielswaray/youtube:latest "
+                       sh "docker push Danielswaray/youtube:latest "
+                    }
+                }
             }
-        }
-        stage('Run container'){
-        when { expression { params.action == 'create'}}
-            steps{
-                runContainer()
             }
         }
         stage('Remove container'){
@@ -92,13 +79,11 @@ pipeline{
         stage('Kube deploy'){
         when { expression { params.action == 'create'}}
             steps{
-                kubeDeploy()
-            }
-        }
-        stage('kube deleter'){
-        when { expression { params.action == 'delete'}}
-            steps{
-                kubeDelete()
+                script{
+                    withKubeConfig(caCertificate: '', clusterName: '', contextName: '', credentialsId: 'k8s', namespace: '', restrictKubeConfigAccess: false, serverUrl: '') {
+                        sh 'kubectl apply -f deployment.yml'
+                    }
+                }
             }
         }
     }
