--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline{
         stage("quality gate"){
            steps {
                 script {
-                    waitForQualityGate abortPipeline: false, credentialsId: 'token'
+                    waitForQualityGate abortPipeline: false, credentialsId: 'sonar-token-id'
                 }
             }
         }
